<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="callback"
            type="com.daniyalxdubizzle.androidtakehomeproject.viewmodels.ItemViewModel" />
    </data>


    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.MainActivity">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical"
            app:shimmer_duration="1000">

            <include
                layout="@layout/item_loading_shimmer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/item_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:focusable="false"
            android:textCursorDrawable="@null"
            android:visibility="gone"
            app:defaultQueryHint="Search Item by Name"
            app:queryHint="Search Item by Name"
            app:iconifiedByDefault="false"
            app:queryBackground="@null" />

        <View
            android:id="@+id/item_search_border"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray5"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RV_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</layout>