...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_3sdp"
            app:cardUseCompatPadding="true"
            android:id="@+id/CV_ITEM">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
...
