...
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="3"
                                android:gravity="center">

                                <com.google.android.material.button.MaterialButton
                                    android:id="@+id/BTN_OrderNow"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/_10sdp"
                                    android:background="@drawable/rounded_button"
                                    android:text="@string/single_purchase"
                                    app:backgroundTint="@null"
...
